수정 및 배포 파일 제외

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,9 @@ data/
 
 # Claude Code temporary files
 tmpclaude-*
+
+# JRE (stored outside project at D:/jre)
+jre/
+
+# Electron build output
+release/
