--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
+        "build:clean": "if exist dist rd /s /q dist & vite build",
         "lint": "eslint .",
         "preview": "vite preview",
         "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && cross-env ELECTRON_START_URL=http://localhost:5173 electron .\"",
